# AI_01

./: readme.md
base_learning/c++/IPC/: readme.txt
base_learning/c++/IPC/fifo/: CMakeLists.txt  client.cpp  common.h  server.cpp
base_learning/c++/IPC/pipe/: CMakeLists.txt  readme
base_learning/c++/IPC/pipe/include/: Message.h
base_learning/c++/IPC/pipe/src/: client.cpp  server.cpp
base_learning/c++/pub-sub/: Broker.cpp  Broker.h  CMakeLists.txt  Publisher.cpp  Publisher.h  Subscriber.cpp  Subscriber.h  main.cpp  readme.txt
base_learning/linux/driver/test/spitest/: Makefile  readme  spitest  spitest.c  spitest1.c
base_learning/nas/: readme.txt
base_learning/python/test/current-gpib/: D66319Control.py
